# aioweenect

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tox.ini
.github/: dependabot.yml  release-drafter.yml  settings.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
aioweenect/: __init__.py  aioweenect.py  exceptions.py  zone_modes.py
tests/: __init__.py  test_aioweenect.py
tests/fixtures/: add_zone_response.json  get_activity_response.json  get_position_response.json  get_subscription_offer_response.json  get_subscription_response.json  get_trackers_response.json  get_user_response.json  get_zones_response.json  login_response.json
