[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "aioweenect"
dist-name = "aioweenect"
author = "eifinger"
author-email = "k.eifinger@googlemail.com"
home-page = "http://github.com/eifinger/aioweenect"
classifiers = [
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "License :: OSI Approved :: MIT License"
    ]
requires = [
    "aiohttp>=3.7.4"
]
requires-python=">=3.8"
description-file="README.md"

[tool.flit.metadata.requires-extra]
test = [
    "aresponses==2.1.4",
    "pytest==6.2.3",
    "pytest-cov==2.11.1",
    "pytest-asyncio==0.14.0",
    "pylint==2.7.4",
    "tox==3.23.0",
    "codecov==2.1.11",
    "flake8==3.9.0",
    "mypy==0.812",
    "pre-commit==2.12.0",
    "black==20.8b1"
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "--cov"

[tool.semantic_release]
version_variable="aioweenect/__init__.py:__version__"
build_command="pip install flit && flit build"
