[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aioweenect"
version = "1.1.1"
description = "Asynchronous Python client for the weenect API"
license = "MIT"
authors = ["Kevin Stillhammer <kevin.stillhammer@gmail.com>"]
readme = "README.md"
repository = "http://github.com/eifinger/aioweenect"
keywords = [
    "aiohttp",
    "asyncio",
    "weenect",
    "weenect-api"
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
aresponses = "2.1.6"
black = "22.12.0"
blacken-docs = "^1.13.0"
coverage = {version = "^7.2", extras = ["toml"]}
bandit = "^1.7.2"
codecov = "2.1.12"
codespell = "^2.2.4"
darglint = "^1.8.1"
flake8 = "4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.11.1"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.4.0"
flake8-markdown = "^0.3.0"
flake8-simplify = "^0.19.3"
mypy = "1.1.1"
pre-commit = "3.1.1"
pre-commit-hooks = "^4.3.0"
pytest = "7.2.2"
pytest-cov = "4.0.0"
pytest-asyncio = "0.20.3"
pytest-mock = "3.10.0"
pylint = "2.17.0"
pyupgrade = "^3.3.1"
safety = "^2.3.5"
vulture = "^2.7"
yamllint = "^1.29.0"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-report xml --cov=aioweenect tests"

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.vulture]
min_confidence = 80
paths = ["aioweenect", "tests"]

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = "pip install poetry && poetry build"
commit_subject = "chore(release): {version}"
branch = "main"
